Add timing code to the atlas building

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -68,6 +68,7 @@ add_library(FreeAgeLib
   src/FreeAge/sprite.cc
   src/FreeAge/sprite_atlas.cpp
   src/FreeAge/texture.cpp
+  src/FreeAge/timing.cpp
   
   src/RectangleBinPack/MaxRectsBinPack.cpp
   src/RectangleBinPack/Rect.cpp
