--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -105,6 +105,7 @@ target_link_libraries(FreeAgeServer
 set(FREEAGE_SRCS
   resources/resources.qrc
   src/FreeAge/client/building.cpp
+  src/FreeAge/client/command_button.cpp
   src/FreeAge/client/game_controller.cpp
   src/FreeAge/client/game_dialog.cpp
   src/FreeAge/client/health_bar.cpp
