Initial rendering of the drag-selection box and of building outlines via line strips

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -121,6 +121,7 @@ set(FREEAGE_SRCS
   src/FreeAge/client/shader_sprite.cpp
   src/FreeAge/client/shader_terrain.cpp
   src/FreeAge/client/shader_ui.cpp
+  src/FreeAge/client/shader_ui_single_color.cpp
   src/FreeAge/client/sprite.cpp
   src/FreeAge/client/sprite_atlas.cpp
   src/FreeAge/client/text_display.cpp
