--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -14,4 +14,4 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: make
-      run: mkdir build && build && cmake -DCMAKE_BUILD_TYPE=RelWithDebInfo -GNinja .. && ninja
+      run: mkdir build && cd build && cmake -DCMAKE_BUILD_TYPE=RelWithDebInfo -GNinja .. && ninja
