--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -13,7 +13,7 @@ jobs:
 
     steps:
     - name: setup
-      run: apt-get install ninja-build
+      run: sudo apt-get update && apt-get install ninja-build
     - uses: actions/checkout@v2
     - name: make
       run: mkdir build && cd build && cmake -DCMAKE_BUILD_TYPE=RelWithDebInfo -GNinja .. && ninja
