--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -13,7 +13,7 @@ jobs:
 
     steps:
     - name: setup
-      run: sudo apt-get update && sudo apt-get install ninja-build gcc-8 qtbase5-dev
+      run: sudo apt-get update && sudo apt-get install ninja-build gcc-8 qtbase5-dev libqt5x11extras5-dev
     - uses: actions/checkout@v2
     - name: make
       run: mkdir build && cd build && CXX=/usr/bin/g++-8 cmake -DCMAKE_BUILD_TYPE=RelWithDebInfo -GNinja .. && ninja
