--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -23,6 +23,8 @@ jobs:
     
     steps:
     - uses: actions/checkout@v2
+    - name: Install Qt
+      uses: jurplel/install-qt-action@v2
     - name: configure
       run: mkdir build && cd build && cmake ..
     - name: build
