Refactoring: Move some helper classes out of render_window.cpp/hpp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -142,6 +142,7 @@ set(FREEAGE_SRCS
   src/FreeAge/client/object.cpp
   src/FreeAge/client/opaqueness_map.cpp
   src/FreeAge/client/opengl.cpp
+  src/FreeAge/client/render_utils.cpp
   src/FreeAge/client/render_window.cpp
   src/FreeAge/client/server_connection.cpp
   src/FreeAge/client/shader_color_dilation.cpp
