Refactoring: Put the pathfinding code on the server into separate files pathfinding.cpp/hpp to reduce the size of the Game class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -118,6 +118,7 @@ add_executable(FreeAgeServer
   src/FreeAge/server/map.cpp
   src/FreeAge/server/match_setup.cpp
   src/FreeAge/server/object.cpp
+  src/FreeAge/server/pathfinding.cpp
   src/FreeAge/server/unit.cpp
 )
 target_link_libraries(FreeAgeServer
