--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -22,7 +22,7 @@ jobs:
     - uses: actions/upload-artifact@v1
       with:
         name: freeage.tar.gz
-        path: freeage.tar.gz
+        path: .
     - name: Upload binaries to release
       if: github.event_name == 'release'
       uses: svenstaro/upload-release-action@v1-release
@@ -54,7 +54,7 @@ jobs:
     - uses: actions/upload-artifact@v1
       with:
         name: freeage.zip
-        path: freeage.zip
+        path: .
     - name: Upload binaries to release
       if: github.event_name == 'release'
       uses: svenstaro/upload-release-action@v1-release
