--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -16,13 +16,13 @@ jobs:
     - uses: actions/checkout@v2
     - name: make
       run: mkdir build && cd build && CXX=/usr/bin/g++-8 cmake -DCMAKE_BUILD_TYPE=RelWithDebInfo -GNinja .. && ninja
-    - name: zip
-      if: github.event_name == 'release'
-      run: tar cvzf freeage.tar.gz build
+#    - name: zip
+#      if: github.event_name == 'release'
+#      run: tar cvzf freeage.tar.gz build
     - uses: actions/upload-artifact@v1
       with:
-        name: freeage.tar.gz
-        path: .
+        name: freeage
+        path: build
     - name: Upload binaries to release
       if: github.event_name == 'release'
       uses: svenstaro/upload-release-action@v1-release
@@ -44,17 +44,19 @@ jobs:
     - name: configure
       run: mkdir build && cd build && cmake ..
     - name: build
-      run: cmake --build build --config Debug
+      run: cmake --build build --config Release
+    - name: deploy Qt
+      run: windeployqt build\Release\FreeAgeTest.exe
     - name: test
       run: cd build && ctest
-    - name: zip
-      if: github.event_name == 'release'
-      run: Compress-Archive build freeage.zip 
-      shell: powershell
+#    - name: zip
+#      if: github.event_name == 'release'
+#      run: Compress-Archive build freeage.zip 
+#      shell: powershell
     - uses: actions/upload-artifact@v1
       with:
-        name: freeage.zip
-        path: .
+        name: freeage
+        path: build\Release
     - name: Upload binaries to release
       if: github.event_name == 'release'
       uses: svenstaro/upload-release-action@v1-release
