--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -2,12 +2,14 @@ name: C/C++ CI
 
 on:
   push:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
   release:
     types: [created]
 
 jobs:
   build-linux:
-
     runs-on: ubuntu-latest
 
     steps:
@@ -16,22 +18,25 @@ jobs:
     - uses: actions/checkout@v2
     - name: make
       run: mkdir build && cd build && CXX=/usr/bin/g++-8 cmake -DCMAKE_BUILD_TYPE=RelWithDebInfo -GNinja .. && ninja
+    - name: test
+      run: cd build && ctest
+# TODO: this could be used to build an AppImage, add artifacts on each build and/or release. 
 #    - name: zip
 #      if: github.event_name == 'release'
 #      run: tar cvzf freeage.tar.gz build
-    - uses: actions/upload-artifact@v1
-      with:
-        name: freeage
-        path: build
-    - name: Upload binaries to release
-      if: github.event_name == 'release'
-      uses: svenstaro/upload-release-action@v1-release
-      with:
-        repo_token: ${{ secrets.GITHUB_TOKEN }}
-        file: freeage.tar.gz
-        asset_name: freeage-linux-x86_64.tar.gz
-        tag: ${{ github.ref }}
-        overwrite: true
+#   - uses: actions/upload-artifact@v1
+#      with:
+#        name: freeage
+#        path: build
+#    - name: Upload binaries to release
+#      if: github.event_name == 'release'
+#      uses: svenstaro/upload-release-action@v1-release
+#      with:
+#        repo_token: ${{ secrets.GITHUB_TOKEN }}
+#        file: freeage.tar.gz
+#        asset_name: freeage-linux-x86_64.tar.gz
+#        tag: ${{ github.ref }}
+#        overwrite: true
   
   
   build-windows:
@@ -49,15 +54,15 @@ jobs:
       run: windeployqt build\Release\FreeAgeTest.exe
     - name: test
       run: cd build && ctest
-#    - name: zip
-#      if: github.event_name == 'release'
-#      run: Compress-Archive build freeage.zip 
-#      shell: powershell
     - uses: actions/upload-artifact@v1
       with:
-        name: freeage
+        name: freeage-windows
         path: build\Release
-    - name: Upload binaries to release
+    - name: Create ZIP file for release (runs on Release event only)
+      if: github.event_name == 'release'
+      run: Compress-Archive build freeage.zip 
+      shell: powershell
+    - name: Upload binaries to release (runs on Release event only) 
       if: github.event_name == 'release'
       uses: svenstaro/upload-release-action@v1-release
       with:
