Damage values for attack damage and armor

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,6 +70,7 @@ set_target_properties(gtest gtest_main PROPERTIES FOLDER "third_party")
 # FreeAge base library, used by both the application and the test
 add_library(FreeAgeLib
   src/FreeAge/common/building_types.cpp
+  src/FreeAge/common/damage.cpp
   src/FreeAge/common/messages.cpp
   src/FreeAge/common/player.cpp
   src/FreeAge/common/timing.cpp
