Type stats data of some units and buildings

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,6 +71,7 @@ set_target_properties(gtest gtest_main PROPERTIES FOLDER "third_party")
 add_library(FreeAgeLib
   src/FreeAge/common/building_types.cpp
   src/FreeAge/common/damage.cpp
+  src/FreeAge/common/type_stats_data.cpp
   src/FreeAge/common/messages.cpp
   src/FreeAge/common/player.cpp
   src/FreeAge/common/timing.cpp
