Modification structs basic structure

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -73,6 +73,7 @@ add_library(FreeAgeLib
   src/FreeAge/common/damage.cpp
   src/FreeAge/common/type_stats_data.cpp
   src/FreeAge/common/messages.cpp
+  src/FreeAge/common/modifications.cpp
   src/FreeAge/common/player.cpp
   src/FreeAge/common/timing.cpp
   src/FreeAge/common/unit_types.cpp
